# vizzy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
include/glad/: glad.h
include/vizzy/: env.hpp  gl.hpp  log.hpp  macro.hpp  util.hpp  vizzy.hpp
src/: glad.c  vizzy.cpp
